--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,24 @@ body {
 }
 
 header {
-  background-color: #2c3e50;
+  background-color: #5d91c5;
+  border-bottom: 1px solid #e0e0e0;
+  display: flex;
+  align-items: center;
+  padding: 0 1rem;
+}
+
+nav {
+  padding: 1rem 5rem;
+}
+
+.nav-item {
+  text-decoration: none;
+  color: #333333;
+  padding: 0 1rem;
+}
+
+.nav-item:hover {
+  text-decoration: underline;
+  color: #4d4d4d;
 }
