--- a/src/index.css
+++ b/src/index.css
@@ -4,39 +4,43 @@
 }
 
 body {
-  background-color: #f9f9f9;
-  color: #333333;
+  background-color: #fff;
+  color: #333;
   font-family: "Roboto", sans-serif;
 }
 
 header {
-  background-color: #5d91c5;
-  border-bottom: 1px solid #e0e0e0;
+  border-bottom: 1px solid #e1f5fe;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 1rem;
 }
 
+.logo {
+  text-decoration: none;
+  color: #0d47a1;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.logo:hover {
+  color: #1565c0;
+}
+
 nav {
-  padding: 1rem 5rem;
+  padding: 1rem 0;
 }
 
 .nav-item {
   text-decoration: none;
-  color: #333333;
-  padding: 0 1rem;
+  color: #1565c0;
+  padding: 0 4rem;
 }
 
 .nav-item:hover {
   text-decoration: underline;
-  color: #4d4d4d;
-}
-
-.logo a {
-  text-decoration: none;
-  color: #333333;
-  font-size: 1.5rem;
-  font-weight: bold;
+  color: #0d47a1;
 }
 
 .home-container {
