--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,42 @@ nav {
   text-decoration: underline;
   color: #0d47a1;
 }
-
-.home-container {
+/* Colors used: Light blue (#E9F1FA), bright blue (#00ABE4) */
+/* Home start */
+.hero {
   display: flex;
-  justify-content: end;
+  justify-content: center;
+  text-align: center;
 }
+
+.hero-content {
+  padding: 4rem 2rem;
+  background-color: #e9f1fa;
+  color: #0d47a1;
+  border-radius: 10px;
+}
+
+.hero-title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.hero-description {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.hero-button {
+  padding: 0.7rem 1.2rem;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #00abe4;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.hero-button:hover {
+  background-color: #0292c2;
+}
+/* Home end */
