--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,36 @@ nav {
   background-color: #0292c2;
 }
 /* Home end */
+
+/* Random Advice start */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4rem 0;
+}
+
+.advice {
+  text-align: center;
+  font-size: 2rem;
+  padding: 3rem;
+  color: #0d47a1;
+  cursor: default;
+}
+
+.random-advice-button {
+  padding: 0.7rem 1.2rem;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #00abe4;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  border: none;
+  cursor: pointer;
+}
+
+.random-advice-button:hover {
+  background-color: #0292c2;
+}
+/* Random Advice end */
