--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@ h1 {
   padding: 4rem 0;
 }
 
+.text-blue {
+  color: #0d47a1;
+}
 /* Commons end */
 
 /* Header start */
@@ -38,13 +41,6 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
-}
-
-.logo {
-  text-decoration: none;
-  color: #0d47a1;
-  font-size: 1.5rem;
-  font-weight: bold;
 }
 
 .logo:hover {
