--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ h1 {
 .text-blue {
   color: #0d47a1;
 }
+
+.text-blue:hover {
+  color: #1565c0;
+}
 /* Commons end */
 
 /* Header start */
@@ -41,10 +45,6 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem;
-}
-
-.logo:hover {
-  color: #1565c0;
 }
 
 nav {
