--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,12 @@ h1 {
 }
 
 .text-blue {
-  color: #0d47a1;
+  color: #00abe4;
 }
+/* Colors used: Light blue (#E9F1FA), bright blue (#00ABE4) */
 
 .text-blue:hover {
-  color: #1565c0;
+  color: #037ba3;
 }
 /* Commons end */
 
@@ -53,13 +54,13 @@ nav {
 
 .nav-item {
   text-decoration: none;
-  color: #1565c0;
+  color: #037ba3;
   padding: 0 4rem;
 }
 
 .nav-item:hover {
   text-decoration: underline;
-  color: #0d47a1;
+  color: #00abe4;
 }
 /* Header stop */
 
