Implement displaying source in advice details and suggested advice details views

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,11 @@ h2 {
   font-size: 1.5rem;
   cursor: default;
 }
+
+h3 {
+  font-size: 1.3rem;
+  cursor: default;
+}
 /* Global end */
 
 /* Commons start */
